<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/ic_map"
        android:title="@string/title_map" />

    <item
        android:id="@+id/nav_schedule"
        android:icon="@drawable/ic_schedule"
        android:title="@string/title_schedule" />

    <item
        android:id="@+id/nav_discovery"
        android:icon="@drawable/ic_discovery"
        android:title="@string/title_discovery" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

</menu>